# sgl

./: .clang-format  .clang-format-ignore  .editorconfig  .gitignore  .gitmodules  .pre-commit-config.yaml  .readthedocs.yml  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  README.md  TODO.md  dependencies.user.xml  dependencies.xml  program.py  pyproject.toml  result  setup-tools.py  setup.bat  setup.py  setup.sh  test.py  test.slang  vcpkg.json
docs/: .gitignore  CMakeLists.txt  Doxyfile.in  api_order.json  changelog.rst  coding_conventions.md  conf.py  generate_api.py  index.rst  requirements.txt
docs/_static/: theme_overrides.css
docs/source/: conf.py  index.rst
docs/src/: api_reference.rst  basic_tutorials.rst  developer_guide.rst
docs/src/developer_guide/: coding_style.rst  compiling.rst  testing.rst
src/: CMakeLists.txt
src/core/: core_python.cpp  error.cpp  object.cpp  version.cpp  window.cpp
src/editor/: CMakeLists.txt  editor.cpp  renderer.h
src/examples/: CMakeLists.txt
src/examples/bitmap/: bitmap_read_perf.py
src/examples/gpu_print/: gpu_print.py  gpu_print.slang  printing.slang
src/examples/graphics_pipeline/: CMakeLists.txt  graphics_pipeline.cpp  graphics_pipeline.py  graphics_pipeline.slang
src/examples/pathtracer/: CMakeLists.txt  accumulator.slang  pathtracer.cpp  pathtracer.py  pathtracer.slang  tone_mapper.slang
src/examples/raytracing/: CMakeLists.txt  raytracing.cpp  raytracing.py  raytracing.slang
src/examples/raytracing_pipeline/: CMakeLists.txt  raytracing_pipeline.cpp  raytracing_pipeline.py  raytracing_pipeline.slang
src/examples/simple_compute/: CMakeLists.txt  compute.cs.slang  shader-cursor.cpp  shader-cursor.h  simple_compute.cpp  simple_compute.py  simple_compute.slang
src/examples/tev/: checkerboard.slang  tev.py
src/examples/texture_array/: window.py
src/examples/tinybc/: CMakeLists.txt  bctypes.slang  tinybc.cpp  tinybc.py  tinybc.slang
src/examples/torch_interop/: add.slang  torch_interop.py
src/examples/window/: draw.slang  window.py
src/kali/: CMakeLists.txt  kali.natvis  kali_python.cpp  kali_tests.cpp  testing.cpp  testing.h
src/kali/core/: assert.h  core_python.cpp  cpu_timer.h  enum.h  error.cpp  error.h  format.h  input.h  logger.cpp  logger.h  macros.h  maths.h  memory_mapped_file.h  object.cpp  object.h  object_python.h  platform.cpp  platform.h  platform_linux.cpp  platform_windows.cpp  plugin.cpp  plugin.h  resolver.h  scalar_types.h  string_utils.cpp  string_utils.h  swizzle_2.inl.h  swizzle_3.inl.h  swizzle_4.inl.h  traits.h  type_utils.h  types.h  vector.h  vector_ops.h  vector_types.h  version.cpp  version.h  window.cpp  window.h
src/kali/imageio/: imageio.cpp  imageio.h  imageio_python.cpp
src/kali/math/: constants.slang  float16.cpp  float16.h  math_python.cpp  matrix.h  matrix_math.h  matrix_types.h  quaternion.h  quaternion_math.h  quaternion_types.h  ray.h  scalar_math.h  scalar_types.h  vector.h  vector_math.h  vector_types.h
src/kali/rhi/: command.cpp  command.h  device.cpp  device.h  formats.cpp  formats.h  fwd.h  helpers.h  native_formats.h  pipeline.cpp  pipeline.h  program.cpp  program.h  resource.cpp  resource.h  rhi_python.cpp  sampler.cpp  sampler.h  swapchain.cpp  swapchain.h  types.h
src/kali_ext/: CMakeLists.txt  helpers.h  kali_core_python.cpp  kali_device_python.cpp  kali_ext.cpp  kali_imageio_python.cpp  kali_math_python.cpp  kali_python.cpp  kali_rhi_python.cpp  nanobind.h  object_python.h
src/kali_tests/: CMakeLists.txt  kali_tests.cpp  test_cpu_timer.cpp  test_enum.cpp  test_maths.cpp  test_memory_mapped_file.cpp  test_memory_stream.cpp  test_object.cpp  test_platform.cpp  test_plugin.cpp  test_stream.cpp  test_string_utils.cpp  testing.cpp  testing.h
src/kali_tests/core/: test_cpu_timer.cpp  test_maths.cpp  test_object.cpp  test_platform.cpp  test_stream.cpp  test_timer.cpp
src/kali_tests/imageio/: test_imageio.cpp  test_imageio.py
src/kali_tests/math/: test_quaternion.cpp
src/kali_tests/rhi/: test_device.cpp  test_formats.cpp  test_program.cpp
src/libkali/: CMakeLists.txt
src/libkali/kali/: assert.h  enum.h  error.cpp  error.h  file_stream.cpp  file_stream.h  format.h  input.h  kali.cpp  kali.h  kali.natvis  kali_pch.h  logger.cpp  logger.h  memory_mapped_file.cpp  memory_mapped_file.h  memory_mapped_file_stream.cpp  memory_mapped_file_stream.h  memory_stream.cpp  memory_stream.h  object.cpp  object.h  platform.cpp  platform.h  platform_linux.cpp  platform_windows.cpp  plugin.cpp  plugin.h  stream.h  string_utils.cpp  string_utils.h  traits.h  type_utils.h  version.cpp  version.h  window.cpp  window.h
src/libsgl/: CMakeLists.txt
src/libsgl/sgl/: sgl.cpp  sgl.h
src/sgl/: sgl.h  sgl.natvis  sgl_pch.h
src/sgl/app/: app.cpp  app.h
src/sgl/core/: binding_tests.cpp  binding_tests.h  bitmap.cpp  bitmap.h  crypto.h  data_type.h  dds_file.cpp  dds_file.h  enum.h  error.cpp  error.h  file_stream.h  file_system_watcher.cpp  file_system_watcher.h  fwd.h  hash.h  input.cpp  input.h  logger.cpp  macros.h  maths.h  memory_mapped_file.cpp  memory_mapped_file.h  memory_mapped_file_stream.cpp  memory_mapped_file_stream.h  object.cpp  object.h  platform.cpp  platform.h  platform_linux.cpp  platform_macos.cpp  platform_windows.cpp  plugin.cpp  resolver.h  stream.h  string.cpp  string.h  struct.cpp  struct.h  thread.h  (+4 more)
src/sgl/device/: agility_sdk.h  base_cursor.cpp  base_cursor.h  blit.cpp  blit.h  blit.slang  buffer_cursor.cpp  buffer_cursor.h  command.cpp  command.h  coopvec.cpp  coopvec.h  cuda_api.cpp  cuda_interop.cpp  cuda_interop.h  cuda_utils.cpp  cuda_utils.h  cursor_utils.cpp  cursor_utils.h  device.cpp  device.h  device_resource.h  fence.cpp  fence.h  formats.cpp  formats.h  framebuffer.h  fwd.h  helpers.cpp  helpers.h  hot_reload.cpp  hot_reload.h  hotreload.cpp  hotreload.h  kernel.cpp  (+38 more)
tests/: CMakeLists.txt  kali_tests.cpp  testing.cpp  testing.h
tests/core/: maths_tests.cpp  memory_mapped_file_tests.cpp  object_tests.cpp  string_utils_tests.cpp  vector_tests.cpp
tests/imageio/: imageio_tests.cpp
tests/rhi/: device_tests.cpp
(+734 files in other folders)
