[build-system]
requires = ["setuptools", "wheel", "typing-extensions"]
build-backend = "setuptools.build_meta"

[tool.pyright]
include = ["./src","./tools","./examples"]
extraPaths = ["./src/sgl/device/tests"]
ignore = ["./tools/host","./tools/download","./src/sgl/device/tests/test_torch_interop.py","./examples/torch_interop/torch_interop.py"]
pythonVersion = "3.10"
typeCheckingMode = "basic"
reportUnusedImport = "error"
reportMissingSuperCall  = "error"
reportInvalidStringEscapeSequence = "error"
reportMissingParameterType = "error"
reportMissingTypeArgument = "error"
reportUnnecessaryTypeIgnoreComment = "error"
